--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "google-map-react": "^1.1.2",
     "history": "^4.7.2",
     "node-sass": "^4.11.0",
-    "prop-types": "^15.6.2",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-accessible-accordion": "^2.4.5",
     "react-apexcharts": "^1.3.0",
     "react-bootstrap": "^1.0.0-beta.5",
+    "react-bootstrap-daterangepicker": "^4.1.0",
     "react-dom": "^16.8.4",
     "react-feather": "^1.1.6",
     "react-flip-move": "^3.0.3",
